# Sanctions-Network-Mapper

./: .env.example  .gitignore  README.md  pyproject.toml  quickstart.py
.devcontainer/: devcontainer.json  setup.sh
src/: __init__.py  cli.py  config.py
src/analyze/: explorer.py
src/ingest/: __init__.py  opencorporates.py  opensanctions.py  parse_sanctions.py  uk_companies_house.py
tests/: __init__.py  test_ingest.py
