[project]
name = "sanctions-network-mapper"
version = "0.1.0"
description = "Cross-reference sanctions lists with corporate registries to identify potential evasion networks"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Matthew Schroeder" }
]
keywords = ["sanctions", "osint", "network-analysis", "entity-resolution", "financial-intelligence"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    # Data processing
    "polars>=1.0.0",
    "pyarrow>=15.0.0",
    
    # HTTP client
    "httpx>=0.27.0",
    
    # Entity resolution
    "rapidfuzz>=3.9.0",
    
    # Graph analysis
    "networkx>=3.3",
    
    # Database
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    
    # Data validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    
    # CLI and display
    "rich>=13.7.0",
    "typer>=0.12.0",
    
    # Orchestration
    "dagster>=1.7.0",
    "dagster-webserver>=1.7.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "ipython>=8.24.0",
    "jupyter>=1.0.0",
]

neo4j = [
    "neo4j>=5.20.0",
]

all = [
    "sanctions-network-mapper[dev,neo4j]",
]

[project.scripts]
snm = "src.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/sanctions-network-mapper"
Documentation = "https://github.com/yourusername/sanctions-network-mapper#readme"
Repository = "https://github.com/yourusername/sanctions-network-mapper"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
